--- a/wp-content/themes/understrap-child/sass/theme/partials/3rd_party/_fontface_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/3rd_party/_fontface_import.scss
@@ -7,7 +7,7 @@
          url('../fonts/geomanist-thin-webfont/geomanist-thin-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-thin-webfont/geomanist-thin-webfont.svg#geomanistthin') format('svg');
     font-weight: 100;
-    font-style: thin;
+    font-style: normal;
 }
 
 @font-face {
@@ -19,7 +19,7 @@
          url('../fonts/geomanist-light-webfont/geomanist-light-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-light-webfont/geomanist-light-webfont.svg#geomanistlight') format('svg');
     font-weight: 200;
-    font-style: light;
+    font-style: normal;
 }
 
 
@@ -32,7 +32,7 @@
          url('../fonts/geomanist-regular-webfont/geomanist-regular-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-regular-webfont/geomanist-regular-webfont.svg#geomanistregular') format('svg');
     font-weight: 300;
-    font-style: regular;
+    font-style: normal;
 }
 
 
@@ -46,7 +46,7 @@
          url('../fonts/geomanist-medium-webfont/geomanist-medium-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-medium-webfont/geomanist-medium-webfont.svg#geomanistmedium') format('svg');
     font-weight: 400;
-    font-style: medium;
+    font-style: normal;
 }
 
 @font-face {
@@ -58,7 +58,7 @@
          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.svg#geomanistbold') format('svg');
     font-weight: 500;
-    font-style: bold;
+    font-style: normal;
 }
 
 @font-face {
@@ -70,12 +70,12 @@
          url('../fonts/geomanist-black-webfont/geomanist-black-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-black-webfont/geomanist-black-webfont.svg#geomanistblack') format('svg');
     font-weight: 600;
-    font-style: black;
+    font-style: normal;
 }
 
 
 
-// Jamie-johson.me note: need to install Geomanist italics - if desired
+/* // Jamie-johson.me note: need to install Geomanist italics - if desired */
 
 
 
