--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_settings.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_settings.scss
@@ -1,10 +1,9 @@
 #home__splash{
     h2{
-		// @extend %display-text;
+		@extend %display-text;
 
 	}
     p {
-        // @extend %body-text;
         font-style: italic;
 
     }
