--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_display_state_styles.scss
@@ -11,6 +11,16 @@
 .br-4  {display: none;}
 
 
+@include mq('phone-small'){
+width: 999%;
+}
+
+@include mq('phone'){
+width: 555%;
+}
+
+
+
 .container-hero__img--mobile{
  	display: none;
  	
