--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_menu_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_menu_styles.scss
@@ -4,10 +4,10 @@
         margin: 0 auto;
         position: relative;
     }
-    
+/*     
 // .navbar{
 //     @extend .fixed-top;
-// }
+// } */
 
 
 .navbar-dark .navbar-brand a, .navbar-dark .navbar-nav .nav-link {
@@ -16,7 +16,7 @@
 }
 
 .navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show > .nav-link {
-    color: $primary;
+    color: $slate;
     font-weight: 600;
 }
 
@@ -48,12 +48,12 @@
     margin-right: 0;
     font-size: inherit;
     display: inherit;
-    // margin-left: $ms-2;
+/*     // margin-left: $ms-2; */
 }
 
-// .navbar-collapse{
+/* // .navbar-collapse{
 //  flex: 1 0 auto;
-// }
+// } */
 
 .custom-logo-link {
     // width: $ms-4;
@@ -62,7 +62,7 @@
 .navbar__mail-link {}
 
 .navbar__call-link {
-    // margin-left: $ms-2;
+/*     // margin-left: $ms-2; */
 }
 
 svg#bug {
@@ -76,21 +76,25 @@ svg#bug {
 
 .navbar-toggler {
     background: $primary;
-    padding: .05rem .5rem;
+    padding: .5rem .5rem;
 }
 
 .navbar-toggler-icon{
-    width: .75rem;
-    height: .75rem;
+    width: 1.75rem;
+    height: 1.75rem;
 }
 
 button:focus {
     outline: $primary;
 }
 
+button{
+    height: unset;
+}
+
 .navbar-brand{
 @include media-breakpoint-up(xs) {
-
+display: none;
 @include media-breakpoint-up(md) {
     display: block;
 }
@@ -98,7 +102,7 @@ button:focus {
 }
 
 .navbar {
-  padding: .25rem 0 .25rem 0;
+  padding: 2rem 0 2rem 0;
     @include media-breakpoint-up(sm){
     padding: 1rem;
 }
@@ -106,7 +110,7 @@ button:focus {
 
 .navbar-dark {
     .navbar-toggler {
-        background-color: $tungsten !important;
+        background-color: $slate !important;
     }
 }
 
@@ -125,8 +129,10 @@ button:focus {
 }
 
 .custom-logo-link {
-    width: 2rem;
-    height: 2rem;
+    width: 2.5rem;
+    line-height: 1 !important;
+    vertical-align: baseline;
+    margin: 0;
 }
 
 .navbar-dark {
@@ -144,8 +150,8 @@ button:focus {
 .navbar-brand,
 .navbar,
 .navbar a {
-    color: $secondary !important;
-    // font-size: $ms-1;
+    color: $slate !important;
+/*     // font-size: $ms-1; */
     text-transform: lowercase;
 }
 
