--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_menu_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_menu_styles.scss
@@ -1,9 +1,4 @@
- .navbar .container{
-        padding-left: 5px;
-        padding-right: 5px;
-        margin: 0 auto;
-        position: relative;
-    }
+
 /*     
 // .navbar{
 //     @extend .fixed-top;
@@ -30,6 +25,8 @@
 
 .navbar-nav li {
     background: #fff;
+    padding: 0 .5rem;
+
 }
 
 .navbar-collapse {}
@@ -47,22 +44,26 @@
     padding-right: 0;
     margin-right: 0;
     font-size: inherit;
+     margin-left: 2rem;
+     display:none; 
+
+@include mq('phone'){}    
     display: inherit;
-/*     // margin-left: $ms-2; */
 }
 
-/* // .navbar-collapse{
-//  flex: 1 0 auto;
-// } */
+  .navbar-collapse{
+ @include mq('tablet-wide'){flex: 1 0 auto;
+}
+}  
 
 .custom-logo-link {
-    // width: $ms-4;
+    width: 4rem;
 }
 
 .navbar__mail-link {}
 
 .navbar__call-link {
-/*     // margin-left: $ms-2; */
+     margin-left: 2rem; 
 }
 
 svg#bug {
@@ -77,7 +78,14 @@ svg#bug {
 .navbar-toggler {
     background: $primary;
     padding: .5rem .5rem;
+@include mq('tablet-wide'){
+display: none;
 }
+}
+
+// .navbar-expand-md .navbar-toggler{
+//     display: flex;
+// }
 
 .navbar-toggler-icon{
     width: 1.75rem;
@@ -93,19 +101,39 @@ button{
 }
 
 .navbar-brand{
-@include media-breakpoint-up(xs) {
+    margin-right: 0;
 display: none;
-@include media-breakpoint-up(md) {
-    display: block;
+@include mq('phone'){
+        padding: 1rem;
+}
+@include mq('tablet'){
+    display: flex;
 }
 }
-}
+
 
 .navbar {
   padding: 2rem 0 2rem 0;
     @include media-breakpoint-up(sm){
-    padding: 1rem;
+
 }
+}
+
+.navbar-expand-md .navbar-collapse{
+    @media (min-width: 48em){
+    display: none !important;
+}
+@include mq('tablet-wide'){
+    display: flex !important;
+}
+}
+
+.navbar-brand {
+
+
+     @include media-breakpoint-up(md) {
+  margin-left: 2rem;  
+ }
 }
 
 .navbar-dark {
@@ -120,16 +148,9 @@ display: none;
     fill: #000;
 }
 
-.navbar-brand {
-    margin-right: 0;
-
-     @include media-breakpoint-up(md) {
-  margin-left: ms(3);  
- }
-}
 
 .custom-logo-link {
-    width: 2.5rem;
+    width: 3.5rem;
     line-height: 1 !important;
     vertical-align: baseline;
     margin: 0;
@@ -155,6 +176,10 @@ display: none;
     text-transform: lowercase;
 }
 
+#main-menu{
+    margin-top: unset;
+}
+
 .nope {
     position: absolute;
     overflow: hidden;
@@ -169,3 +194,4 @@ display: none;
 [aria-hidden="false"] {
     display: block;
 }
+
