--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_vert_rhythm_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_vert_rhythm_styles.scss
@@ -1,12 +1,12 @@
-%title							 { @include vr( $font-size: 6,   $margin-bottom: 1 );}       
-%headline						 { @include vr( $font-size: 5,   $margin-bottom: 1 );}
-%subhead                         { @include vr( $font-size: 4,   $margin-bottom: 1 );}
-%sublist                         { @include vr( $font-size: 4,   $margin-bottom: 1 );}
-%display-text                    { @include vr( $font-size: 3,   $margin-bottom: 1 );}
-%body-text                       { @include vr( $font-size: 2,   $margin-bottom: 1 );}
-%para                            { @include vr( $font-size: 1,   $margin-bottom: 1 );}
-%lead                            { @include vr( $font-size: 1,   $margin-bottom: 1 );}
-%caption                         { @include vr( $font-size: .75, $margin-bottom: 1 );}
+%title							 { @include vr( $font-size: 6,  );}       
+%headline						 { @include vr( $font-size: 5,  );}
+%subhead                         { @include vr( $font-size: 4,  );}
+%sublist                         { @include vr( $font-size: 4,  );}
+%display-text                    { @include vr( $font-size: 3,  );}
+%body-text                       { @include vr( $font-size: 2, $line-height: 1.5,  );}
+%para                            { @include vr( $font-size: 1,  );}
+%lead                            { @include vr( $font-size: 1,  );}
+%caption                         { @include vr( $font-size: .75,);}
 a.link__advance--text      		 {}
-a.link__advance--chevron   		 {}
-.navbar-brand, .navbar, .navbar a{ @include vr( $font-size: .5);}
+a.link__advance--chevron   		 {margin-bottom: 2rem;}
+.navbar-brand, .navbar, .navbar a{ @include vr( $font-size: 1);}
