--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_graphics_and_artwork_styles.scss
@@ -6,8 +6,13 @@
 
 
 #profile-small {
-width: 100%;
-left: 0%;
+width: 50%;
+left: 25%;
+bottom: 0;
+@include mq('tablet-small'){
+    width: 75%;
+    left: 60%;
+}
 }
 
 #evo-small{
@@ -31,21 +36,21 @@ width: 125%;
 // }
 // }
 
-.profile {
-        width: 45%;
-        left: 65%;
-        z-index:-1;
-          @include media-breakpoint-up(md) {
-        left: 60%;
-    }
-}
+// .profile {
+//         width: 45%;
+//         left: 65%;
+//         z-index:-1;
+//           @include media-breakpoint-up(md) {
+//         left: 60%;
+//     }
+// }
 
 
 //splash page background images
 .bgme {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
         background-position: right bottom;
         background-size: 80%;
@@ -56,7 +61,7 @@ width: 125%;
 .bgshoes {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/shoes.jpg");
         background-position: left bottom;
         background-size: 60%;
@@ -68,7 +73,7 @@ width: 125%;
 .bgbrainsv2 {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/brains.jpg");
         background-position: right bottom;
         background-size: 50%;
@@ -79,7 +84,7 @@ width: 125%;
 .bgevo {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/evolutionv2.jpg");
         background-position: right bottom;
         background-size: 80%;
@@ -90,7 +95,7 @@ width: 125%;
 
 .bgarrow {
     background: none;
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/arrowbg.svg");
         background-position: left 165%;
         background-size: 75%;
@@ -102,7 +107,7 @@ width: 125%;
 .bgconductor {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/conductor-light-1.jpg");
         background-position: 105% bottom;
         background-size: 80%;
@@ -113,7 +118,7 @@ width: 125%;
 .bgregister {
     background: none;
 
-@media (min-width: 64em) {
+@media (min-width: 64.1em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/register-light.jpg");
         background-position: right 100%;
         background-size: 40%;
