--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/bootstrap_variables_override.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/bootstrap_variables_override.scss
@@ -34,6 +34,8 @@ $lead-font-family:          $font-family-sans-serif;
 $link-font-family:			$font-family-monospace;
 $nav-font-family:			$font-family-monospace;
 
+
+
 $headline-font-weight:      600;
 $subhead-font-weight:       400;
 $sublist-font-weight:       600;
@@ -41,4 +43,71 @@ $display-text-font-weight:	300;
 $body-text-font-weight:     300;
 $para-font-weight:          300;
 $lead-font-weight:          400;
+
+// stylelint-disable
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$black:    #000 !default;
+
+$grays: () !default;
+$grays: map-merge((
+  "100": $gray-100,
+  "200": $gray-200,
+  "300": $gray-300,
+  "400": $gray-400,
+  "500": $gray-500,
+  "600": $gray-600,
+  "700": $gray-700,
+  "800": $gray-800,
+  "900": $gray-900
+), $grays);
+
+$slate:     #778899;
+$tungsten:  #D2DBE2;
+$blue:      #007bff;
+$indigo:    #6610f2;
+$purple:    #6f42c1;
+$pink:      #e83e8c;
+$red:       #dc3545;
+$orange:    #fd7e14;
+$yellow:    #ffc107;
+$green:     #28a745;
+$teal:      #20c997;
+$cyan:      #17a2b8;
+
+$colors: () !default;
+$colors: map-merge((
+  "slate":      $slate, 
+  "tungsten":   $tungsten,
+  "blue":       $blue,
+  "indigo":     $indigo,
+  "purple":     $purple,
+  "pink":       $pink,
+  "red":        $red,
+  "orange":     $orange,
+  "yellow":     $yellow,
+  "green":      $green,
+  "teal":       $teal,
+  "cyan":       $cyan,
+  "white":      $white,
+  "gray":       $gray-600,
+  "gray-dark":  $gray-800
+), $colors);
+
+$primary:       $slate;
+$secondary:     $tungsten;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$dark:          $gray-800;
 
