--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_type_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_type_variables.scss
@@ -1,16 +1,16 @@
 
 h1, h2, h3, h4, h5, h6{
-	font-family:   $headline-font-family;
-	color:         $headline-color;        
-	font-weight:   $headline-font-weight;
-
+	font-family:   unset;
+	color:         unset;        
+	font-weight: unset;
+	font-size: unset;
 }
 
 p{
 
-font-family:   $body-text-font-family;
-color:         $body-text-color;        
-font-weight:   $body-text-font-weight;
+font-family:   unset;
+color:         unset;
+font-weight:   unset;
 
 }
 
@@ -30,7 +30,7 @@ font-weight:   $headline-font-weight;
 
 }
 
-%subhead{
+%subhead, %subhead-lg{
 
 font-family:   $subhead-font-family;
 color:         $subhead-color;        
@@ -38,7 +38,7 @@ font-weight:   400;
 
 }
 
-%sublist{
+%sublist, %sublist-lg{
 
 font-family:   $subhead-font-family;
 color:         $subhead-color;        
@@ -46,7 +46,7 @@ font-weight:   $subhead-font-weight;
 
 }
 
-%display-text{
+%display-text, %display-text-lg, %figure-head-lg, %figure-text-lg{
 
 font-family:   $display-text-font-family;
 color:         $display-text-color;        
@@ -54,13 +54,14 @@ font-weight:   200;
 
 }
 
-%body-text{
+%body-text, %body-text-lg {
 
 font-family:   $body-text-font-family;
 color:         $body-text-color;        
 font-weight:   $body-text-font-weight;
 
 }
+
 
 .lead {
 	font-weight: $lead-font-weight;
@@ -74,6 +75,7 @@ font-weight:   $body-text-font-weight;
 
     font-family: $font-family-serif;
     font-style: italic;
+
 }
 .caption{}
 
@@ -81,4 +83,3 @@ font-weight:   $body-text-font-weight;
 	font-family: $font-family-sans-serif;
 	color: $link-color;
 }
-
