--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_capabilities_table_module.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_capabilities_table_module.scss
@@ -20,25 +20,47 @@
     table-layout: fixed;
     width: 100%;
     align-self: baseline;
+    font-family: $font-family-monospace;
+    line-height: 1.5rem;
 
-    thead, th {
-        font-size: .75rem;
-        text-transform: lowercase;
+    .capa__row{
+        vertical-align: middle;
+        height: 36px;
+        line-height: 1.5rem;
     }
 
-    thead th, .capa-table__title {
+    th{
+        font-weight: 100;
+        text-align: center;
+    }
+
+    #capa__row--1 th{
+        text-transform: uppercase;
+        letter-spacing: .15rem;
+        height: 24px;
+        font-size: 1rem;
+        padding-top: 0;
+        vertical-align: middle;
+        border-bottom: thin solid hsl(210, 14%, 50%); 
+    }
+
+     #capa__row--2{
+        text-transform: uppercase;
+        height: 18px;
+        font-size: .5rem;
+        letter-spacing: .15rem;
+        background: hsl(210, 14%, 45%);
+    }
+
+    thead{
         background-color: $slate;
         color: #fff;
-        padding: ms(0.25);
         letter-spacing: .01rem;
         font-weight: 300;
+        vertical-align: middle;
     }
 
-    .capa-table__title {
-        text-transform: uppercase;
-        font-weight: 300;
-        font-size: 1rem;
-        letter-spacing: .05rem;
+    .capa-table__column--1 {
         border-bottom: thin solid #fff;
     }
 
@@ -46,48 +68,28 @@
     //     padding-left: $ms-2_25;
     // }
 
+
+
     tbody td {
         padding: 1.25rem 0;
         color: $gray-900;
         font-weight: 300;
         border: thin solid #fff;
-        font-size: .65rem;
         letter-spacing: -.005rem;
         vertical-align: middle;
-
-        @include media-breakpoint-up(sm) {
-            font-size: .75rem;
-            // min-height: $rvr-4_75;
-        }
-    }
-
-    td {
+        font-size: 1rem;
         text-align: center;
-        // line-height: $rvr-1;
-        // height: $rvr-2;
-
-        // vertical-align: top;
-        // padding-right: $rvr-2;
-   
     }
 
-    th {
-        text-align: center;
-
-        // padding-left: $ms-1;
-   
-    }
 
     caption {
         caption-side: bottom;
         color: #111;
-        font-size: ms(2);
         font-weight: 300;
+        padding: 1rem;
         // margin-bottom: $rvr-_25;
         // padding-left: $ms-2_25;
-
         // max-width: ms(11);
-   
     }
 }
 
