--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_graphics_and_artwork_styles.scss
@@ -7,28 +7,56 @@
 
 #profile-small {
 width: 50%;
-left: 25%;
+margin-left: 50%;
 bottom: 0;
+position: absolute;
 @include mq('tablet-small'){
     width: 75%;
-    left: 60%;
+    margin-left: 60%;
 }
 }
+
+#my-brains{
+    width: 100%;
+    margin-left: 5%;
+@include mq('tablet-small'){
+    bottom: 0;
+    margin-left: 20%;
+    width: 80%;
+    position: fixed;
+}
+}
+
 
 #evo-small{
-left: 0;
-width: 125%;
+margin-left: 20%;
+width: 60%;
+@include mq('tablet-wide') {
+    width: 60%;
+    max-width: 60%;
+    margin-left: 30%;
+}
 }
 
+#register-small {
+        width: 100%;
+        margin-left: 40%;
+    }
 
+#my-shoes{
+    margin-left: -25%;
+    width: 125%;
+    overflow: hidden;
+    bottom: 5rem;
+}
 
 // .container-hero__img--mobile.evo{
 //         width: 100%;
 //         height: auto;
-//         left: 0;
+//         margin-left: 0;
 //         z-index:-1;
 //         position: absolute;
-//           @include media-breakpoint-up(md) {
+//           @include mq('tablet') {
 //         left:0%;
 //       #evo-small{
 //         width: 125%;
@@ -40,7 +68,7 @@ width: 125%;
 //         width: 45%;
 //         left: 65%;
 //         z-index:-1;
-//           @include media-breakpoint-up(md) {
+//           @include mq('tablet') {
 //         left: 60%;
 //     }
 // }
@@ -50,7 +78,7 @@ width: 125%;
 .bgme {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
         background-position: right bottom;
         background-size: 80%;
@@ -61,7 +89,7 @@ width: 125%;
 .bgshoes {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/shoes.jpg");
         background-position: left bottom;
         background-size: 60%;
@@ -73,7 +101,7 @@ width: 125%;
 .bgbrainsv2 {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/brains.jpg");
         background-position: right bottom;
         background-size: 50%;
@@ -84,10 +112,10 @@ width: 125%;
 .bgevo {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/evolutionv2.jpg");
-        background-position: right bottom;
-        background-size: 80%;
+        background-position: 90% bottom;
+        background-size: 65%;
         background-repeat: no-repeat;
     }
 }
@@ -95,10 +123,10 @@ width: 125%;
 
 .bgarrow {
     background: none;
-@media (min-width: 64.1em) {
+@media (min-width: 64em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/arrowbg.svg");
-        background-position: left 165%;
-        background-size: 75%;
+        background-position: 98% 80%;
+        background-size: 80;
         background-repeat: no-repeat;
     }
 }
@@ -107,7 +135,7 @@ width: 125%;
 .bgconductor {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/conductor-light-1.jpg");
         background-position: 105% bottom;
         background-size: 80%;
@@ -118,7 +146,7 @@ width: 125%;
 .bgregister {
     background: none;
 
-@media (min-width: 64.1em) {
+@media (min-width: 78em) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/register-light.jpg");
         background-position: right 100%;
         background-size: 40%;
@@ -140,30 +168,36 @@ width: 125%;
     }
 }
 
-.my-value.splash {
-    .container-hero__img--mobile {
-        width: 100%;
-        left: 50%;
-    }
 
-}
 
 .container-hero__img--mobile {
-    position: absolute;
+    position: relative;
     bottom: 0;
-    left: 25%;
+    left: 0;
     z-index: -1;
+    width: 100%;
+    display: none;
+    @media (min-width:18.75em){
+        display: inherit;
+        position: relative;
+    }
+@include mq('phone'){
+    display: block;
 
-    @media (min-width: 1200px) {
+}
+@include mq('tablet'){
+    margin-left: 5%;
+}
+@include mq('tablet-wide') {
+    position: absolute;
+}
+    @include mq('desktop-wide'){
         display: none;
     }
 }
 
 
-.about-me .container-hero__img--mobile {
-    left: 0;
-    width: 70%;
-}
+
 
 .my-expertise .container-hero__img--mobile {
     @media (min-width: 300px) {
@@ -180,7 +214,7 @@ width: 125%;
         }
     }
 
-    @media (min-width: 992px) {
+   @include mq('tablet-wide') {
         left: 35%;
     }
 
@@ -192,6 +226,7 @@ width: 125%;
 
     @media (min-width: 1900px) {}
 }
+
 
 
 
@@ -209,7 +244,7 @@ width: 125%;
     justify-content: center;
     overflow: hidden;
 
-    @include media-breakpoint-up(lg) {
+    @include mq('tablet-wide') {
         display: none;
     }
 }
@@ -218,22 +253,13 @@ width: 125%;
     width: 100%;
 }
 
-.brains{
-    width: 100%;
-    left: 5%;
-@include media-breakpoint-up(md) {
-    bottom: 0;
-    left: 20%;
-    width: 80%;
-    position: fixed;
-}
-}
+
 
 //svg tweaks
 .stats .style-svg {
     // height: $ms-6;
     // width: $ms-6;
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
         height: ms(6.5);
         width: ms(6.5);
     }
@@ -268,7 +294,7 @@ width: 125%;
 
 .diagram {
     // margin: $rvr-2 auto;
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
         // margin: $rvr-3 0;
     }
 }
@@ -288,7 +314,7 @@ width: 125%;
 
 .diagram__competitive-advantage{
 // @extend .diagram;
-@include media-breakpoint-up(md) {
+@include mq('tablet') {
         // margin-left: auto;
         // margin-right: auto;
     }
@@ -303,7 +329,7 @@ width: 125%;
         flex-direction: column;
         justify-content: space-between;
         // margin: $rvr-2 auto;
-        @media (min-width: 992px){
+       @include mq('tablet-wide') {
             display: none;
         }
     }
@@ -370,7 +396,7 @@ svg.icon{
         @include make-col-ready;
         @include make-col(10);
     
-    @media (min-width: 992px){
+   @include mq('tablet-wide') {
         width: 5%;
         max-width: 5%;
         flex: 0 0 0;
@@ -387,14 +413,14 @@ svg.icon{
         fill: $slate;
     } 
     width: 50%;
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
     width: 40%;
     }
-    @include media-breakpoint-up(lg) {
+    @include mq('tablet-wide') {
     width: 30%;
 }
     
-@include media-breakpoint-up(xl) {}
+@include mq('desktop') {}
 }     
 
 
@@ -428,12 +454,12 @@ svg.icon{
     @include media-breakpoint-up(sm) {
         margin-left: ms(4);
     }
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
         // @include ms-respond(font-size, 3);
             margin-left: 2rem;
         }
     
-    @include media-breakpoint-up(lg) {
+    @include mq('tablet-wide') {
    
             // @include ms-respond(font-size, 2);
             margin-left: 1rem;
@@ -443,7 +469,7 @@ svg.icon{
 }
 
 .diagram-content__end-to-end{
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
 
     }
 }
@@ -487,7 +513,7 @@ padding-right: 0px;
     @include make-col(6);
     padding-left: 0px;
     padding-right: 0px;
-    @include media-breakpoint-up(md) {
+    @include mq('tablet') {
 .end-to-end--vert{
     width: 100%;
     }
@@ -606,7 +632,7 @@ img.categories__content_image {
     @media (min-width: 768px) {}
     
     
-    @media (min-width: 992px) {}
+   @include mq('tablet-wide') {}
     
     
     @media (min-width: 1200px) {
