push it real good

--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_global_styles.scss
@@ -100,6 +100,10 @@ title{}
 figure{}
 article{}
 
+.article__spacer{
+  height: 25vh;
+  background: $body-bg;
+}
 
 .fixed-top{
     position: fixed;
