--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home-page_articles_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home-page_articles_styles.scss
@@ -1,5 +1,8 @@
 /* // SEE SPLASH ARTCILE STYLES FOR HOME SPLASH SETTINGS */
 
+/* ////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////            WHATIAM      /////////////////////////// */
+/* ///////////////////////////////////////////////////////////////////////////*/
 #whatiam {
     @include flush-left;
     @include push-middle;
@@ -14,6 +17,9 @@
     }
 }
 
+/* ////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////            MY-MO        /////////////////////////// */
+/* ///////////////////////////////////////////////////////////////////////////*/
 .my-mo {
     .content-container {
         position: relative;
@@ -28,6 +34,25 @@
 
     .container-hero__img--mobile {
         margin-top: 4rem;
+
+        @include mq("tablet-wide") {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+    }
+
+    @include mq("tablet-wide") {
+        height: 60vh;
+        width: 99rem;
+        max-width: 99rem;
+    }
+
+
+    @include mq("desktop") {
+        width: 100%;
+        max-width: 100%;
+        height: 100vh;
     }
 }
 
@@ -35,120 +60,221 @@
     @include flush-left;
 
     @include mq("tablet-wide") {
+        @include flush-left;
+
+        /*         @include narrow-single-col; */
+
+        /* @include wide-container(); */
+        @include left-link;
+
         .br {
             display: block;
         }
 
-        @include push-middle;
-        @include flush-left;
-        @include narrow-single-col;
+        .content-container {
+            h3 {
+                @include vr($width: 36);
+            }
 
-        /* @include wide-container(); */
-        @include left-link;
+            p {
+                @include vr($width: 32);
+            }
+        }
+
+        width: 99rem;
+        max-width: 99rem;
+    }
+
+
+    @include mq("desktop") {
+        width: 148.5rem;
+        height: 100vh;
+
+        @include push-middle;
+
+        padding-bottom: 20rem;
+
+        .content-container {
+            display: block;
+
+            /*      h3{
+                @include vr($width: 30);
+                    } */
+            p {
+                @include vr($width: 26);
+            }
+
+            width: 148.5rem;
+        }
+    }
+
+
+    @include mq("desktop-xl") {
+        width: 99rem;
+        max-width: 99rem;
     }
 }
 
+/* ////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////         what i do       /////////////////////////// */
+/* ///////////////////////////////////////////////////////////////////////////*/
+
 #wrapper__whatido {
-    height: 120vh;
+    height: 100vh;
+
+    @include mq("tablet-wide") {
+        height: 120vh;
+    }
+
+
+    @include mq("desktop") {
+        height: 100vh;
+    }
+
 
     @include center-middle;
 
     justify-content: space-around;
+}
 
-    #whatido {
+#whatido {
+    @include cols;
+
+    position: unset !important;
+
+    .content-container {
+        /*        @include mq('phablet'){
+            width: 70%;
+        } */
+
         @include cols;
+        @include push-auto;
 
-        position: unset !important;
+        flex: 0 0 auto;
+        position: unset;
 
-        h1 {
-            width: 100%;
-            flex: 0 0 auto;
+        @include mq("phone") {
+            padding: 3rem 4rem;
+            background: rgba(255, 255, 255, 0.5);
+
+            /*             border: .5rem solid $gray-200; */
+        }
+    }
+
+    .content1, .content2 {
+        flex: 0 0 auto;
+
+        /*     width: 85%;
+        max-width: 85%; */
+    }
+
+    .link {
+        /* flex: 0 0 auto;
+        position: relative; */
+        bottom: 10rem;
+        left: 50%;
+    }
+
+    h1 {
+        width: 100%;
+        flex: 0 0 auto;
+    }
+
+    h3, p {
+        text-align: left;
+
+        @include mq("phablet") {
+            text-align: left;
         }
 
-        h3, p {
-            text-align: left;
 
-            @include mq("phablet") {
-                text-align: left;
-            }
+        @include mq("tablet-small") {
+            text-align: justify;
+        }
 
 
-            @include mq("tablet-small") {
-                text-align: justify;
-            }
+        @include mq("tablet") {
+            text-align: justify;
+        }
+    }
+
+    @include mq("phone") {
+        h1 {
+            padding-left: 4rem;
+        }
+    }
 
 
-            @include mq("tablet") {
-                text-align: justify;
-            }
+    @include mq("phablet") {
+        .content-container {
+            width: 80%;
+            max-width: 80%;
+        }
+
+        h1 {
+            margin-left: 10%;
+        }
+    }
+
+
+    @include mq("tablet-wide") {
+        h1 {
+            @include push-auto;
+
+            width: 50%;
         }
 
         .content-container {
-            width: 70%;
+            width: 50%;
+            max-width: 50%;
 
-            @include cols;
             @include push-auto;
-
-            flex: 0 0 auto;
-            position: unset;
         }
 
-        @include mq("phone-wide") {
-            .content-container {
-                width: 80%;
-                max-width: 80%;
-            }
-
-            h1 {
-                margin-left: 10%;
-            }
+        .br {
+            display: block;
         }
-
 
         .content1, .content2 {
-            flex: 0 0 auto;
-
-            /*     width: 85%;
-            max-width: 85%; */
-        }
-
-        .link {
-            /* flex: 0 0 auto;
-            position: relative; */
-            bottom: 10rem;
-            left: 50%;
-
-            @include mq("tablet-wide") {}
-        }
-
-        @include mq("tablet-wide") {
-            h1{
-                @include push-auto();
-                width: 40%;
-            }
-            .content-container {
-                width: 40%;
-                max-width: 40%;
-                @include push-auto;
-            }
-            .br {
-                display: block;
-            }
-
-            .content1, .content2 {
-                width: 100%;
-                max-width: 100%;
-            }
+            width: 100%;
+            max-width: 100%;
         }
     }
+
+
+    /*         @include mq('desktop'){
+        h1{
+        position: absolute;
+        top: 27rem;
+        left: 27rem;
+        }
+    
+        display: block;
+        .content-container{
+            position: absolute;
+            bottom: 16rem;
+            left: 22rem;
+            width: 44rem;
+            padding: 3rem 4rem;
+            background: rgba(255, 255, 255,.9);
+    
+       border: .5rem solid $gray-200;
+        }
+    
+    } */
 }
 
-#howidoit {
-    @include push-middle();
-    & h4{
-        width: 100%;
+/* ////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////          HOW I DO IT    /////////////////////////// */
+/* ///////////////////////////////////////////////////////////////////////////*/
 
+#howidoit {
+    @include push-middle;
+
+    & h4 {
+        width: 100%;
     }
+
     .content1 {
         order: 2;
         background: $tungsten;
@@ -159,7 +285,10 @@
 
         h4 {
             @include vr($font-size: 2, $margin-bottom: 1, $line-height: 3);
-            padding-left: 1rem; letter-spacing: .25rem; font-weight: 300;
+
+            padding-left: 1rem;
+            letter-spacing: .25rem;
+            font-weight: 300;
         }
 
         h4:last-of-type {
@@ -245,9 +374,9 @@
     }
 
     @include mq("phone-wide") {
-/*         h1 {
-    margin-left: 10%;
-} */
+        /*         h1 {
+            margin-left: 10%;
+        } */
 
         .content-container {
             max-width: 90%;
@@ -255,102 +384,296 @@
             @include push-auto;
         }
     }
-@include mq('tablet'){
-/*     h1{
-    margin-left: 0;
-} */
-/*     .content-container{
-    max-width: 80%;
-    width: 100%;
-} */
-    .content1{
+
+
+    @include mq("tablet") {
+        /*     h1{
+            margin-left: 0;
+        } */
+        /*     .content-container{
+            max-width: 80%;
+            width: 100%;
+        } */
+        .content1 {
+            width: 100%;
+            margin-top: 4rem;
+        }
+    }
+
+
+    @include mq("tablet-wide") {
+        h1 {
+            margin-left: 17rem;
+        }
+
+        @include make-row;
+
         width: 100%;
-        margin-top: 4rem;
-    }
-}
-    @include mq('tablet-wide'){
-        .content-container{
-            @include flush-cols-left();
-            flex-direction: row;
-            width: 100%;
-            max-width: 100%;
-        }
-        .content1{
-          
-        }
-        .content2{
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
 
-        }
-    }
-
-    @include mq('desktop'){
-      h3, h4{
-        margin-left: 0;
-        margin-right: 0;
-      }
-      h4{
-  @include vr($width: 50);
-      }
-        .content-container{
-            @include flush-cols-left();
-            flex-direction: column;
-            width: 100%;
-            max-width: 100%;
-        
-      .content2{
-            @include make-row();
-            width: 100%;
-            max-width: 100%;
-            flex: 0 0 auto;
-        }
-        .howidoit__disciplines{
-            display: flex;
-            @include make-row();
-            width: 100%;
-            max-width: 100%;
-        }
-        .howidoit__disciplines_content{
-            display: flex;
-            flex-direction: column;
-            flex: 0 0 auto;
-            width: 100%;
-            max-width: 20%;
-            align-items: normal;
-            justify-content: flex-start;
-            letter-spacing: 0;
-            }
-        .content1{
-         /*  margin-left: auto; */
-          background: none;
-
-          h4{
-            @include vr($font-size: 1);
-            width: unset;
-                 letter-spacing: 0;
-          }
-          .quote{
+        .page-head__howidoit {
             display: none;
-          }
 
+            /*  @include make-col-ready();
+            @include make-col(3);
+            position: absolute;
+            left: 12%;
+            top: 2%;
+               background: $slate;
+            padding: 2rem;
+            color: #fff; */
         }
-   .disciplines__content-icon{
-    width: 30%;
-    max-width: 30%;
-    padding-right: 0;
-    margin-bottom: -1rem;
-   }
-   h5{@include vr($font-size: 1, $line-height: 1.25);}
-   p{@include vr($font-size: 1, $margin-top: .75, $line-height: 1.25); font-style: normal; letter-spacing: 0; padding-right: 1.5rem;}
 
+        .content-container {
+            @include make-col-ready;
+            @include make-col(9);
+
+            flex-direction: row;
+            width: 75%;
+            max-width: 75%;
+        }
+
+        .content1 {
+            background: none;
+            color: initial;
+            padding: initial;
+            display: none;
+        }
+
+        .content2 {
+            /*       width: 50%;
+            max-width: 50%; */
+        }
+
+        .howidoit__disciplines {
+            @include make-row;
+
+            flex-direction: row;
+            flex-wrap: wrap;
+            display: flex;
+        }
+
+        .howidoit__disciplines_content {
+            @include make-col-ready;
+            @include make-col(4);
+
+            height: 28rem;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            display: flex;
+            padding: 4rem;
+            margin-bottom: 0;
+        }
+
+        .howidoit__disciplines_content:hover {
+            background: $tungsten;
+            cursor: pointer;
+
+            &,
+            & .cls-4, .cls-3, .cls-1 {
+                fill: #111;
+            }
+        }
+
+        .disciplines__content-icon {
+            width: 70%;
+            max-width: 80%;
+            padding: 0;
+        }
+
+        h5 {
+            margin-top: -2rem;
+            text-align: center;
+        }
+
+        p {
+            display: none;
+        }
     }
 
+
+    #col-offset {
+        @media (max-width: 64rem) {
+            display: none;
+        }
+
+        @include mq("tablet-wide") {
+            display: block;
+        }
+
+
+        margin-right: 30%;
+        flex: 0 0 auto;
+        background: $slate;
+        height: 28rem;
+        overflow: hidden;
+        width: 100%;
+        margin: 0;
+    }
+
+    @include mq("desktop") {
+        h3, h4 {
+            margin-left: 0;
+            margin-right: 0;
+        }
+
+        h4 {
+            @include vr($width: 50);
+        }
+
+        .content-container {
+            @include flush-cols-left;
+
+            flex-direction: column;
+            width: 100%;
+            max-width: 100%;
+
+            .content2 {
+                @include make-row;
+
+                width: 100%;
+                max-width: 100%;
+                flex: 0 0 auto;
+            }
+
+            .howidoit__disciplines {
+                display: flex;
+
+                @include make-row;
+
+                width: 100%;
+                max-width: 100%;
+            }
+
+            .howidoit__disciplines_content {
+                display: flex;
+                flex-direction: column;
+                flex: 0 0 auto;
+                width: 100%;
+                max-width: 20%;
+                align-items: normal;
+                justify-content: flex-start;
+                letter-spacing: 0;
+            }
+
+            .content1 {
+                /*  margin-left: auto; */
+                background: none;
+
+                h4 {
+                    @include vr($font-size: 1);
+
+                    width: unset;
+                    letter-spacing: 0;
+                }
+
+                .quote {
+                    display: none;
+                }
+            }
+
+            .disciplines__content-icon {
+                width: 30%;
+                max-width: 30%;
+                padding-right: 0;
+                margin-bottom: -1rem;
+            }
+
+            h5 {
+                @include vr($font-size: 1, $line-height: 1.25);
+            }
+
+            p {
+                @include vr($font-size: 1, $margin-top: 0.75, $line-height: 1.25);
+
+                font-style: normal;
+                letter-spacing: 0;
+                padding-right: 1.5rem;
+            }
+        }
+    }
 }
-}
+
+/* ////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////       MY QUALIFICATIONS    /////////////////////////// */
+/* ///////////////////////////////////////////////////////////////////////////*/
 
 #my-qualifications {
     flex-direction: column;
-    h4{
-@extend %display-text-lg;
+
+    h4 {
+        @extend %display-text-lg;
+    }
+
+    h5 {
+        @extend %subhead-lg;
+    }
+
+    h6 {
+        font-size: 2rem;
+        font-weight: 400;
+        text-align: center;
+        text-transform: capitalize;
+        line-height: 1.5;
+
+        /*         margin-top: -5rem; */
+        background: #111;
+        padding: 1rem 1.75rem;
+        color: #fff;
+        border-radius: 2rem;
+    }
+
+    .stats-caption {
+        align-self: flex-start;
+        border-radius: 2rem;
+        box-sizing: content-box;
+    }
+
+    #stats-order-1, #stats-order-4, #stats-order-7 {
+        .stats-caption {
+            margin-bottom: -6rem;
+        }
+    }
+    .myqualifications__stats{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .myqualifications__stats_caption {
+        margin-top: 4rem;
+        text-align: center;
+
+        /*        border: 1rem solid #111;
+        padding: 2rem 0; */
+        display: none;
+    }
+
+    .stats {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex: 0 0 110%;
+        margin-bottom: 6rem;
+    }
+
+    .stats .style-svg, .stats .cls-1 {
+        order: 2;
+        fill: $slate;
+    }
+
+    .stats-caption {
+        order: 1;
+    }
+
+    .divider__hr {
+        width: 4rem;
+
+        @include push-auto;
+        @include vr($margin-top: 2);
     }
 }
 
