--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
@@ -157,8 +157,12 @@ text-align: left;
 @mixin push-middle(){
 padding: 25rem 0;
 @include mq('tablet-wide'){
-	padding-top: 20rem;
-	padding-bottom: 20rem;
+	padding-top: 0rem;
+	padding-bottom: 30rem;
+}
+@include mq('desktop'){
+	padding-top: 30rem;
+	padding-bottom: 30rem;
 }
 }
 
